[gd_scene load_steps=14 format=3 uid="uid://bvx4s8g1ncmlg"]

[ext_resource type="Texture2D" uid="uid://cc0epl6qi1g36" path="res://data/sprite/enemy/slime/sadge slime.png" id="1_atp2k"]
[ext_resource type="Script" path="res://char/enemy/testslime/testslime.gd" id="1_eqr7n"]
[ext_resource type="Script" path="res://char/state_machine.gd" id="3_ssi7i"]
[ext_resource type="Script" path="res://char/enemy/testslime/states/sleep.gd" id="4_maiky"]
[ext_resource type="Script" path="res://char/enemy/testslime/states/idle.gd" id="4_pmf8n"]
[ext_resource type="Script" path="res://char/enemy/testslime/states/walk.gd" id="6_ybw1x"]
[ext_resource type="Script" path="res://char/enemy/testslime/states/air.gd" id="7_k1kbl"]
[ext_resource type="Script" path="res://char/enemy/testslime/states/transform.gd" id="8_yrqnw"]
[ext_resource type="Script" path="res://char/hitbox.gd" id="9_y6oko"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o02vc"]
size = Vector2(60, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xnpf5"]
size = Vector2(1.0625, 2.46154)

[sub_resource type="CircleShape2D" id="CircleShape2D_oc062"]
radius = 34.2345

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0kien"]
radius = 25.0
height = 74.0

[node name="testslime" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_eqr7n")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_atp2k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 6)
shape = SubResource("RectangleShape2D_o02vc")

[node name="ScreenNotifier" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 6)
scale = Vector2(5.65, 4.1)

[node name="LeftPlatformDetector" type="RayCast2D" parent="."]
position = Vector2(-34, 21)
target_position = Vector2(0, 15)
collide_with_areas = true

[node name="RightPlatformDetector" type="RayCast2D" parent="."]
position = Vector2(34, 22)
target_position = Vector2(0, 15)
collide_with_areas = true

[node name="RightWallDetector" type="Area2D" parent="."]
position = Vector2(39, -3)
scale = Vector2(1, 13)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWallDetector"]
position = Vector2(-2, 0.692308)
shape = SubResource("RectangleShape2D_xnpf5")
debug_color = Color(0.980392, 0, 0.364706, 0.419608)

[node name="LeftWallDetector" type="Area2D" parent="."]
position = Vector2(-20, 14)
scale = Vector2(1, 13)
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWallDetector"]
position = Vector2(-17, -0.615385)
shape = SubResource("RectangleShape2D_xnpf5")
debug_color = Color(0.980392, 0, 0.364706, 0.419608)

[node name="StateMachine" type="Node" parent="LeftWallDetector"]
script = ExtResource("3_ssi7i")
initial_state = NodePath("Sleep")

[node name="Sleep" type="Node" parent="LeftWallDetector/StateMachine"]
script = ExtResource("4_maiky")

[node name="Idle" type="Node" parent="LeftWallDetector/StateMachine"]
script = ExtResource("4_pmf8n")

[node name="Walk" type="Node" parent="LeftWallDetector/StateMachine"]
script = ExtResource("6_ybw1x")

[node name="Air" type="Node" parent="LeftWallDetector/StateMachine"]
script = ExtResource("7_k1kbl")

[node name="Transform" type="Node" parent="LeftWallDetector/StateMachine"]
script = ExtResource("8_yrqnw")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(1, 5)
shape = SubResource("CircleShape2D_oc062")
debug_color = Color(0, 0.639216, 0.34902, 0.419608)

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("9_y6oko")
inflicted_hitstun = 15
inflicted_damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1, 5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_0kien")
debug_color = Color(1, 0, 0, 0.227451)
